--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,8 +85,13 @@ body {
 			display: none;
 			position: fixed;
 			a {
+				float: right;
+				margin-right: 10px;
+				font-size: 15pt;
+				font-weight: bold;
+				font-family: helvetica;
 				text-decoration: none;
-				color: red;
+				color: green;
 			}
 			.added-item{
 				margin: 3px;
@@ -105,7 +110,7 @@ body {
 				}
 				.remove-button{
 					width: 188px;
-					margin-left: 88px;
+					margin-left: 85px;
 					button{
 						margin-top: 25px;
 						float: right;
@@ -335,8 +340,17 @@ body {
 				}
 			}
 
-			#pay{
+			#pay {
+				float: right;
+				margin: 120px 20px 0px 0px;
 
+				a {
+					font-size: 15pt;
+					font-weight: bold;
+					font-family: helvetica;
+					text-decoration: none;
+					color: green;
+				}
 			}
 		}
 		#receipt-option-outer{
